--- a/Makefile.common
+++ b/Makefile.common
@@ -69,11 +69,9 @@ init:
 	cd ~/.password-store && rm -rf .git && oras pull --plain-http --allow-path-traversal 169.254.32.1:5000/defn/bootstrap:password-store && git reset --hard
 
 	mark -- configure gpg
-	$(MAKE) perms
 	rsync -ia ~/.password-store/home/.gnupg/. ~/.gnupg/.
-	if echo $$VSCODE_GIT_ASKPASS_NODE | grep local/lib/code-server; then $(MAKE) init-gpg; fi
-	if echo $$VSCODE_GIT_ASKPASS_NODE | grep scode-server/server-stable-web; then $(MAKE) init-gpg; fi
-	if test -z "$$VSCODE_GIT_ASKPASS_NODE"; then $(MAKE) init-gpg; fi
+	$(MAKE) perms
+	$(MAKE) init-gpg
 
 	mark -- configure repos
 	cd ~/.password-store && git pull
