--- a/Makefile.common
+++ b/Makefile.common
@@ -66,7 +66,8 @@ init:
 
 	mark -- configure password-store
 	mkdir -p ~/work/password-store
-	cd ~/.password-store && rm -rf .git && oras pull --plain-http --allow-path-traversal 169.254.32.1:5000/defn/bootstrap:password-store && git fetch && git reset --hard origin/master
+	cd ~/.password-store && rm -rf .git && oras pull --plain-http --allow-path-traversal 169.254.32.1:5000/defn/bootstrap:password-store && git reset --hard origin/master
+	cd ~/.password-store && (git push 2>dev/null || true) && git pull
 
 	mark -- configure gpg
 	rsync -ia ~/.password-store/home/.gnupg/. ~/.gnupg/.
