--- a/Makefile.common
+++ b/Makefile.common
@@ -103,7 +103,7 @@ github-login:
 
 argocd-login:
 	if pod get ns argocd; then \
-		argocd login --insecure argocd-server.argocd.svc --username admin --password adminadmin \
+		argocd login --insecure argocd-server.argocd.svc --username admin --password adminadmin 2>/dev/null \
 			|| (argocd login --insecure argocd-server.argocd.svc --username admin --password "$$(kubectl --context argocd get -o json secret argocd-initial-admin-secret | jq -r '.data.password | @base64d')" \
 					&& argocd account update-password --new-password adminadmin --current-password "$$(kubectl --context argocd get -o json secret argocd-initial-admin-secret | jq -r '.data.password | @base64d')"); \
 		fi
