--- a/Makefile.common
+++ b/Makefile.common
@@ -82,7 +82,7 @@ init:
 	$(MAKE) init-site
 
 tilt:
-	env tilt up --context pod --port $(tilt_port) --host 127.0.0.1
+	env tilt up --context pod --port $(tilt_port) --host 127.0.0.1 --stream
 
 logout:
 	-echo yes | gh auth logout --hostname github.com
