--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ ASDFX=0.10.2
 AWSCLI=2.7.13
 AWSVAULT=6.6.0
 BUF=1.8.0
-CADDY=2.5.2
+CADDY=2.6.0
 CDKTF=0.12.2
 CILIUM=0.12.1
 CLOUDFLARED=2022.9.0
@@ -14,12 +14,13 @@ COSIGN=1.12.0
 CREDENTIALPASS=0.6.4
 CUE=0.4.3
 DIFFT=0.36.1
-DOCTL=1.79.0
+DOCTL=1.81.0
 EARTHLY=0.6.23
-FLYCTL=0.0.393
+FLYCTL=0.0.394
 FULCIO=0.5.3
 GH=2.15.0
 GOLANG=1.19.1
+GORELEASER=1.11.4
 GRPCURL=1.8.7
 HELM=3.9.4
 HOF=0.6.6
@@ -52,8 +53,8 @@ SHFMT=3.5.1
 SKAFFOLD=1.39.2
 STEAMPIPE=0.16.3
 STEP=0.22.0
-SWITCH=0.7.1
-TEMPORAL=1.17.4
+SWITCH=0.7.2
+TEMPORAL=1.17.6
 TEMPORALITE=0.1.1
 TERRAFORM=1.3.0-rc1
 TILT=0.30.8
