--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ jobs:
     - name: Login to Packages Container registry
       uses: docker/login-action@v1 
       with:
-        registry: {{ env.REGISTRY }}
+        registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Download latest earthly
@@ -33,4 +33,4 @@ jobs:
     - name: Earthly version
       run: earthly --version
     - name: Run build
-      run: echo earthly --ci --push +build --repo={{ env.REGISTRY }}
+      run: echo earthly --ci --push +build --repo=${{ env.REGISTRY }}
