--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,11 +26,9 @@ jobs:
       uses: docker/login-action@v1 
       with:
         registry: ghcr.io
-        username: ${{ github.actor }}
+        username: not-used
         password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Download latest earthly
+     name: Download latest earthly
       run: "sudo /bin/sh -c 'wget https://github.com/earthly/earthly/releases/download/v0.6.23/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'"
-    - name: Earthly version
-      run: earthly --version
     - name: Run build
-      run: earthly --ci --push --remote-cache ghcr.io/defn/dev-cache +build
+      run: earthly --ci --push --cache-from ghcr.io/${{ github.repository }}-cache --remove-cache ghcr.io/${{ github/repository }}-cache:${{ env.GITHUB_REF_NAME }} +build
