--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,4 +31,4 @@ jobs:
     - name: Download latest earthly
       run: "sudo /bin/sh -c 'wget https://github.com/earthly/earthly/releases/download/v0.6.23/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'"
     - name: Run build
-      run: earthly --ci --push --cache-from ghcr.io/${{ env.GITHUB_REPOSITORY }}-cache --remove-cache ghcr.io/${{ env.GITHUB_REPOSITORY }}-cache:${{ env.GITHUB_REF_NAME }} +build
+      run: earthly --ci --push --cache-from ghcr.io/${{ env.GITHUB_REPOSITORY }}-cache --remote-cache ghcr.io/${{ env.GITHUB_REPOSITORY }}-cache:${{ env.GITHUB_REF_NAME }} +build
