--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,7 @@ jobs:
           branch="${GITHUB_REF##*/}"
         fi
         git checkout -b "$branch" || true
+        echo "BRANCH=${branch}" >> $GITHUB_ENV
     - name: Login to Packages Container registry
       uses: docker/login-action@v1 
       with:
@@ -46,6 +47,6 @@ jobs:
       run: >-
         earthly --ci --push 
         --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main 
-        --remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${GITHUB_REF_NAME} 
+        --remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH} 
         +build
-        --tag=${GITHUB_REF_NAME}
+        --tag=${BRANCH}
