--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
         branch=""
         if [ -n "$GITHUB_HEAD_REF" ]; then
           branch="$GITHUB_HEAD_REF"
-          echo "BRANCH=${{github.event.pull_request.number}}" >> $GITHUB_ENV
+          echo "BRANCH=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
         else
           branch="${GITHUB_REF##*/}"
           echo "BRANCH=${branch}" >> $GITHUB_ENV
