--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,7 @@ jobs:
         if [ -n "$GITHUB_HEAD_REF" ]; then
           branch="$GITHUB_HEAD_REF"
           echo "BRANCH=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
+          echo "BUILD=1" >> $GITHUB_ENV
         else
           branch="${GITHUB_REF_NAME}"
           echo "BRANCH=${branch}" >> $GITHUB_ENV
@@ -30,6 +31,7 @@ jobs:
 
         if [ "$GITHUB_REF_TYPE" = "tag" ]; then
           echo "BRANCH=${GITHUB_REF_NAME}" >> $GITHUB_ENV
+          echo "BUILD=1" >> $GITHUB_ENV
         fi
     - name: Login to Packages Container registry
       uses: docker/login-action@v1 
@@ -47,7 +49,7 @@ jobs:
         chmod +x /usr/local/bin/earthly
         '
     - name: Run build
-      if: env.GITHUB_REF_TYPE == "tag" || env.GITHUB_HEAD_REF
+      if: env.BUILD == "1"
       run: >-
         set -x;
         earthly --ci --push 
