--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,17 +48,23 @@ jobs:
         && 
         chmod +x /usr/local/bin/earthly
         '
+    - name: Build targets
+      run: >-
+        earthly --strict --push --no-output
+        --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main 
+        --remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH} 
+        +build
     - name: Run tests
       run: >-
         earthly --strict --push --no-output
         --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main 
         --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH} 
         +tests
-    - name: Run build
+    - name: Publish image
       if: env.BUILD == '1'
       run: >-
         earthly --strict --push --no-output
         --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main 
-        --remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH} 
-        +build
+        --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH} 
+        +publish
         --tag=${BRANCH}
