--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,17 +21,18 @@ jobs:
         if [ -n "$GITHUB_HEAD_REF" ]; then
           branch="$GITHUB_HEAD_REF"
           echo "BRANCH=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
-          echo "BUILD=1" >> $GITHUB_ENV
+          echo "TAG=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
         else
           branch="${GITHUB_REF_NAME}"
           echo "BRANCH=${branch}" >> $GITHUB_ENV
+          echo "TAG=latest" >> $GITHUB_ENV
         fi
 
         git checkout -b "$branch" || true
 
         if [ "$GITHUB_REF_TYPE" = "tag" ]; then
           echo "BRANCH=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-          echo "BUILD=1" >> $GITHUB_ENV
+          echo "TAG=${GITHUB_REF_NAME}" >> $GITHUB_ENV
         fi
     - name: Login to Packages Container registry
       uses: docker/login-action@v1 
@@ -61,18 +62,9 @@ jobs:
         --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH} 
         +tests
     - name: Publish image
-      if: env.BUILD == '1'
       run: >-
         earthly --strict --push --no-output
         --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main 
         --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH} 
         +publish
-        --tag=${BRANCH}
-    - name: Publish latest image
-      if: env.BUILD != '1'
-      run: >-
-        earthly --strict --push --no-output
-        --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main 
-        --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH} 
-        +publish
-        --tag=latest
+        --tag=${TAG}
