--- a/Makefile.common
+++ b/Makefile.common
@@ -151,8 +151,10 @@ pending: # Generate pending version updates
 	$(MAKE) pending-asdf
 
 pending-images:
-	pod get pods --all-namespaces -o json | gron | grep '\.image ='  | cut -d'"' -f2 | sort -u | grep -v :5000/ > .image-versions.txt
-	echo quay.io/defn/dev:latest >> .image-versions.txt
+	(pod get pods --all-namespaces -o json | gron | grep '\.image ='  | cut -d'"' -f2 | grep -v :5000/; \
+		echo quay.io/defn/dev:latest; \
+		echo ghcr.io/defn/dev:latest; \
+	) | sort -u >> .image-versions.txt
 
 sync: # Sync all the things for installing control, global
 	git pull
