--- a/Makefile.common
+++ b/Makefile.common
@@ -150,8 +150,7 @@ pending: # Generate pending version updates
 	$(MAKE) pending-asdf
 
 pending-images:
-	(pod get pods --all-namespaces -o json | gron | grep '\.image ='  | cut -d'"' -f2 | grep -v 169.2543.32.1:5000/ | grep -v /defn/dev: | grep -v /workspace:latest; \
-	) | sort -u >> .image-versions.txt
+	(pod get pods --all-namespaces -o json | gron | grep '\.image ='  | cut -d'"' -f2 | grep -v 169.2543.32.1:5000/ | grep -v /defn/dev: | grep -v /workspace:latest) | sort -u > .image-versions.txt
 
 sync: # Sync all the things for installing control, global
 	git pull
