--- a/.env
+++ b/.env
@@ -5,20 +5,20 @@ ASDFX=0.10.2
 AWSCLI=2.7.13
 AWSVAULT=6.6.0
 BUF=1.8.0
-CADDY=2.6.0
+CADDY=2.6.1
 CDKTF=0.12.2
 CILIUM=0.12.1
 CLOUDFLARED=2022.9.0
 CODESERVER=4.7.0
-COSIGN=1.12.0
+COSIGN=1.12.1
 CREDENTIALPASS=0.6.4
 CUE=0.4.3
 DIFFT=0.36.1
 DOCTL=1.81.0
 EARTHLY=0.6.23
-FLYCTL=0.0.394
+FLYCTL=0.0.395
 FULCIO=0.5.3
-GH=2.15.0
+GH=2.16.0
 GOLANG=1.19.1
 GORELEASER=1.11.4
 GRPCURL=1.8.7
@@ -28,10 +28,10 @@ HUBBLE=0.10.0
 JLESS=0.8.0
 K3D=5.4.6
 K3SUP=0.12.0
-K9S=0.26.3
+K9S=0.26.4
 KN=1.7.0
 KREW=0.4.3
-KUBECTL=1.24.5
+KUBECTL=1.24.6
 KUMA=1.7.1
 KUSTOMIZE=4.5.7
 LITESTREAM=0.3.9
@@ -46,7 +46,7 @@ PACKER=1.8.3
 POWERLINE=1.22.1
 PROTOC=3.20.1
 PYTHON=3.10.6
-REKOR=0.11.0
+REKOR=0.12.1
 RUST=1.63.0
 SHELLCHECK=0.8.0
 SHFMT=3.5.1
@@ -56,7 +56,7 @@ STEP=0.22.0
 SWITCH=0.7.2
 TEMPORAL=1.17.6
 TEMPORALITE=0.1.1
-TERRAFORM=1.3.0-rc1
+TERRAFORM=1.3.0
 TILT=0.30.8
 VAULT=1.11.3
 VCLUSTER=0.12.0
