--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,8 @@ jobs:
     env:
       FORCE_COLOR: 1
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
       - name: Put back the git branch into git (Earthly uses it for tagging)
         run: |
           branch=""
@@ -53,7 +54,8 @@ jobs:
     env:
       FORCE_COLOR: 1
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
       - name: Put back the git branch into git (Earthly uses it for tagging)
         run: |
           branch=""
@@ -97,7 +99,8 @@ jobs:
       - build-amd
       - build-arm
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
       - name: Put back the git branch into git (Earthly uses it for tagging)
         run: |
           branch=""
