--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ name: CI
       - v**
   pull_request: {}
 jobs:
-  build-amd:
+  buildAmd:
     runs-on: ubuntu-latest
     env:
       FORCE_COLOR: 1
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Put back the git branch into git (Earthly uses it for tagging)
-        run: |
+        run: |-
           branch=""
           if [ -n "$GITHUB_HEAD_REF" ]; then
             branch="$GITHUB_HEAD_REF"
@@ -40,7 +40,7 @@ jobs:
           username: not-used
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Download latest earthly
-        run: sudo /bin/sh -c ' wget  -q https://github.com/earthly/earthly/releases/download/v0.6.23/earthly-linux-amd64  -O /usr/local/bin/earthly  &&  chmod +x /usr/local/bin/earthly '
+        run: sudo /bin/sh -c 'wget -q https://github.com/earthly/earthly/releases/download/v0.6.23/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'
       - name: Set up QEMU
         id: qemu
         uses: docker/setup-qemu-action@v1
@@ -49,7 +49,7 @@ jobs:
           platforms: all
       - name: Build amd target
         run: earthly --strict --push --no-output --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd --remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd +build-amd
-  build-arm:
+  buildArm:
     runs-on: ubuntu-latest
     env:
       FORCE_COLOR: 1
@@ -57,7 +57,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Put back the git branch into git (Earthly uses it for tagging)
-        run: |
+        run: |-
           branch=""
           if [ -n "$GITHUB_HEAD_REF" ]; then
             branch="$GITHUB_HEAD_REF"
@@ -82,7 +82,7 @@ jobs:
           username: not-used
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Download latest earthly
-        run: sudo /bin/sh -c ' wget  -q https://github.com/earthly/earthly/releases/download/v0.6.23/earthly-linux-amd64  -O /usr/local/bin/earthly  &&  chmod +x /usr/local/bin/earthly '
+        run: sudo /bin/sh -c 'wget -q https://github.com/earthly/earthly/releases/download/v0.6.23/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'
       - name: Set up QEMU
         id: qemu
         uses: docker/setup-qemu-action@v1
@@ -96,13 +96,13 @@ jobs:
     env:
       FORCE_COLOR: 1
     needs:
-      - build-amd
-      - build-arm
+      - buildAmd
+      - buildArm
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Put back the git branch into git (Earthly uses it for tagging)
-        run: |
+        run: |-
           branch=""
           if [ -n "$GITHUB_HEAD_REF" ]; then
             branch="$GITHUB_HEAD_REF"
@@ -127,7 +127,7 @@ jobs:
           username: not-used
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Download latest earthly
-        run: sudo /bin/sh -c ' wget  -q https://github.com/earthly/earthly/releases/download/v0.6.23/earthly-linux-amd64  -O /usr/local/bin/earthly  &&  chmod +x /usr/local/bin/earthly '
+        run: sudo /bin/sh -c 'wget -q https://github.com/earthly/earthly/releases/download/v0.6.23/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'
       - name: Set up QEMU
         id: qemu
         uses: docker/setup-qemu-action@v1
