--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,6 +35,8 @@ jobs:
             echo "BRANCH=${GITHUB_REF_NAME}" >> $GITHUB_ENV
             echo "TAG=${GITHUB_REF_NAME}" >> $GITHUB_ENV
           fi
+
+          git config --unset http.https://github.com/.extraheader
       - name: Login to Packages Container registry
         uses: docker/login-action@v1
         with:
@@ -79,6 +81,8 @@ jobs:
             echo "BRANCH=${GITHUB_REF_NAME}" >> $GITHUB_ENV
             echo "TAG=${GITHUB_REF_NAME}" >> $GITHUB_ENV
           fi
+
+          git config --unset http.https://github.com/.extraheader
       - name: Login to Packages Container registry
         uses: docker/login-action@v1
         with:
@@ -126,6 +130,8 @@ jobs:
             echo "BRANCH=${GITHUB_REF_NAME}" >> $GITHUB_ENV
             echo "TAG=${GITHUB_REF_NAME}" >> $GITHUB_ENV
           fi
+
+          git config --unset http.https://github.com/.extraheader
       - name: Login to Packages Container registry
         uses: docker/login-action@v1
         with:
