try installing pipx packages with system python

--- a/.env
+++ b/.env
@@ -45,7 +45,7 @@ ORAS=0.14.1
 PACKER=1.8.3
 POWERLINE=1.22.1
 PROTOC=3.20.1
-PYTHON=3.10.6
+PYTHON=system
 REKOR=0.12.1
 RUST=1.63.0
 SHELLCHECK=0.8.0
