--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ CADDY=2.6.1
 CDKTF=0.12.2
 CILIUM=0.12.1
 CLOUDFLARED=2022.9.1
-CODESERVER=4.7.0
+COREDNS=1.10.10
 COSIGN=1.12.1
 CREDENTIALPASS=0.7.0
 CUE=0.4.3
@@ -51,12 +51,9 @@ REKOR=0.12.1
 RUST=1.63.0
 SHELLCHECK=0.8.0
 SHFMT=3.5.1
-SKAFFOLD=1.39.2
 STEAMPIPE=0.16.3
 STEP=0.22.0
 SWITCH=0.7.2
-TEMPORAL=1.17.6
-TEMPORALITE=0.1.1
 TERRAFORM=1.3.0
 TILT=0.30.8
 TURBOREPO=1.5.3
