--- a/d/k3d/Makefile
+++ b/d/k3d/Makefile
@@ -1,10 +1,11 @@
 tailscale_version ?= 1.30.2_amd64
 
-DEFN_DEV_FROM ?= 169.254.32.1:5000/defn/k3d:k3d-base
+DEFN_DEV_FROM ?= quay.io/defn/dev:k3d
 DEFN_DEV_IMAGE ?= 
 
 base: tailscale_$(tailscale_version)/tailscaled
-	docker build --no-cache -t "$(DEFN_DEV_FROM)" --build-arg DEFN_DEV_IMAGE="${DEFN_DEV_IMAGE}" -f Dockerfile.base .
+	docker build -t "${DEFN_DEV_FROM}"  --build-arg DEFN_DEV_IMAGE="${DEFN_DEV_IMAGE}" -f Dockerfile.base .
+	docker push "${DEFN_DEV_FROM}"
 
 build:
 	if test -d $(app)/bootstrap/$(name); then kustomize build --enable-helm $(app)/bootstrap/$(name) > defn-dev-bootstrap.yaml; else echo > defn-dev-bootstrap.yaml; fi
