upgrade all the things

--- a/.env
+++ b/.env
@@ -14,10 +14,10 @@ COSIGN=1.12.1
 CREDENTIALPASS=0.7.0
 CUE=0.4.3
 DIFFT=0.36.1
-DOCTL=1.82.0
+DOCTL=1.82.2
 EARTHLY=0.6.24
-FLYCTL=0.0.398
-FULCIO=0.5.3
+FLYCTL=0.0.401
+FULCIO=0.6.0
 GH=2.16.1
 GOLANG=1.19.1
 GORELEASER=1.11.4
@@ -54,8 +54,10 @@ SHFMT=3.5.1
 STEAMPIPE=0.16.4
 STEP=0.22.0
 SWITCH=0.7.2
+TEMPORAL=1.18.0
+TEMPORALITE=0.2.0
 TERRAFORM=1.3.1
 TILT=0.30.8
 TURBOREPO=1.5.4
-VAULT=1.11.3
-VCLUSTER=0.12.0
+VAULT=1.11.4
+VCLUSTER=0.12.1
