--- a/Caddyfile
+++ b/Caddyfile
@@ -53,3 +53,31 @@ http://pod {
 
 	reverse_proxy http://localhost:8000
 }
+
+http://localhost {
+	handle_path /dev/* {
+		reverse_proxy http://localhost:8888
+	}
+
+	handle_path /vc1/* {
+		reverse_proxy http://localhost:8001
+	}
+
+	handle_path /vc2/* {
+		reverse_proxy http://localhost:8002
+	}
+
+	handle_path /vc3/* {
+		reverse_proxy http://localhost:8003
+	}
+
+	handle_path /vc4/* {
+		reverse_proxy http://localhost:8004
+	}
+
+	handle_path /api/* {
+		reverse_proxy http://defm
+	}
+
+	reverse_proxy http://localhost:8000
+}
