--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ CADDY=2.6.1
 CDKTF=0.12.3
 CILIUM=0.12.1
 CLOUDFLARED=2022.9.1
+CODESERVER=4.7.1
 COREDNS=1.10.0
 COSIGN=1.12.1
 CREDENTIALPASS=0.7.0
