--- a/Makefile.common
+++ b/Makefile.common
@@ -197,7 +197,7 @@ cluster-inner:
 		--k3s-node-label env=$(name)@server:0 \
 		--config etc/k3d.yaml \
 		--registry-config etc/registries.yaml $(DEFN_DEV_HOST_PORTMAPS) \
-		--token "$$(oass k3d-control-k3s-token)" \
+		--token "$$(pass k3d-control-k3s-token)" \
 		--env bar=baz@server:0
 	docker update --restart=no $(context)-server-0
 	-cd $(app)/tf/$(name) && make init get plan apply
