base needs pass

--- a/d/k3d/Makefile
+++ b/d/k3d/Makefile
@@ -4,6 +4,7 @@ DEFN_DEV_FROM ?= quay.io/defn/dev:k3d
 DEFN_DEV_IMAGE ?=
 
 base: tailscale_$(tailscale_version)/tailscaled
+	pass hello
 	docker build -t "${DEFN_DEV_FROM}"  --build-arg DEFN_DEV_IMAGE="${DEFN_DEV_IMAGE}" -f Dockerfile.base .
 	docker push "${DEFN_DEV_FROM}"
 
