--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@ COSIGN=1.12.1
 CREDENTIALPASS=0.7.0
 CUE=0.4.3
 DIFFT=0.36.1
+DOCKER=20.10.18
 DOCTL=1.82.2
 EARTHLY=0.6.24
 FLYCTL=0.0.401
@@ -56,10 +57,12 @@ SHFMT=3.5.1
 STEAMPIPE=0.16.4
 STEP=0.22.0
 SWITCH=0.7.2
+TAILSCALE=1.30.2
 TEMPORAL=1.18.0
 TEMPORALITE=0.2.0
 TERRAFORM=1.3.1
 TILT=0.30.8
 TURBOREPO=1.5.4
+UBUNTU=ubuntu:focal-20220826
 VAULT=1.11.4
 VCLUSTER=0.12.1
