--- a/Makefile.common
+++ b/Makefile.common
@@ -356,14 +356,18 @@ manual:
 	$(MAKE) install-global
 
 droplet:
-	-pod delete -n kube-system secret meh.node-password.k3s
-	env DIGITALOCEAN_ACCESS_TOKEN="$$(pass DIGITALOCEAN_ACCESS_TOKEN)" \
-		doctl compute droplet delete meh -f
+	$(MAKE) dropoff
 	env DIGITALOCEAN_ACCESS_TOKEN="$$(pass DIGITALOCEAN_ACCESS_TOKEN)" \
 		doctl compute droplet create meh --region sfo3 --image 118009548 --size s-1vcpu-2gb --wait \
 		--user-data-file <(cat etc/droplet-user-data.template \
 			| sed 's#_TSKEY_#'$$(pass k3d-control-tskey)'#' \
 			| sed 's#_K3STOKEN_#'$$(docker exec k3d-control-server-0 cat /var/lib/rancher/k3s/server/node-token)'#')
+
+dropoff:
+	-pod delete -n kube-system secret meh.node-password.k3s
+	-pod delete node meh
+	env DIGITALOCEAN_ACCESS_TOKEN="$$(pass DIGITALOCEAN_ACCESS_TOKEN)" \
+		doctl compute droplet delete meh -f
 
 debug:
 	pod debug node/$(node) -it --image=quay.io/defn/dev:latest -- bash -il
