--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,7 +52,11 @@ jobs:
           image: tonistiigi/binfmt:latest
           platforms: all
       - name: Build amd target
-        run: earthly --strict --push --no-output --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd --remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd +build-amd
+        run: |-
+          earthly --strict --push --no-output \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd \
+          	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd \
+          	+build-amd
   buildArm:
     runs-on: ubuntu-latest
     env:
@@ -98,7 +102,11 @@ jobs:
           image: tonistiigi/binfmt:latest
           platforms: all
       - name: Build arm target
-        run: earthly --strict --push --no-output --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm --remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-arm +build-arm
+        run: |-
+          earthly --strict --push --no-output \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm \
+          	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-arm \
+          	+build-arm
   buildAmdK3DBase:
     runs-on: ubuntu-latest
     env:
@@ -144,7 +152,11 @@ jobs:
           image: tonistiigi/binfmt:latest
           platforms: all
       - name: Build amd k3d-base target
-        run: earthly --strict --push --no-output --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-k3d-base --remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd-k3d-base +build-amd-k3d-base
+        run: |-
+          earthly --strict --push --no-output \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-k3d-base \
+          	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd-k3d-base \
+          	+build-amd-k3d-base
   buildArmK3DBase:
     runs-on: ubuntu-latest
     env:
@@ -190,7 +202,11 @@ jobs:
           image: tonistiigi/binfmt:latest
           platforms: all
       - name: Build arm k3d-base target
-        run: earthly --strict --push --no-output --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-k3d-base --remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-arm-k3d-base +build-arm-k3d-base
+        run: |-
+          earthly --strict --push --no-output \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-k3d-base \
+          	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-arm-k3d-base \
+          	+build-arm-k3d-base
   publish:
     runs-on: ubuntu-latest
     env:
@@ -198,54 +214,7 @@ jobs:
     needs:
       - buildAmd
       - buildArm
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Put back the git branch into git (Earthly uses it for tagging)
-        run: |-
-          branch=""
-          if [ -n "$GITHUB_HEAD_REF" ]; then
-            branch="$GITHUB_HEAD_REF"
-            echo "BRANCH=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
-            echo "TAG=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
-          else
-            branch="${GITHUB_REF_NAME}"
-            echo "BRANCH=${branch}" >> $GITHUB_ENV
-            echo "TAG=latest" >> $GITHUB_ENV
-          fi
-
-          git checkout -b "$branch" || true
-
-          if [ "$GITHUB_REF_TYPE" = "tag" ]; then
-            echo "BRANCH=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-            echo "TAG=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-          fi
-
-          git config --unset http.https://github.com/.extraheader
-      - name: Login to Packages Container registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: not-used
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Download latest earthly
-        run: sudo /bin/sh -c 'wget -q https://github.com/earthly/earthly/releases/download/v0.6.23/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'
-      - name: Set up QEMU
-        id: qemu
-        uses: docker/setup-qemu-action@v1
-        with:
-          image: tonistiigi/binfmt:latest
-          platforms: all
-      - name: Publish images
-        run: earthly --strict --push --no-output --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-arm +images --repo=ghcr.io/ --tag=${TAG}
-  publishK3DBase:
-    runs-on: ubuntu-latest
-    env:
-      FORCE_COLOR: 1
-    needs:
-      - buildAmdK3DBase
+      - buildArmK3DBase
       - buildArmK3DBase
     steps:
       - name: Checkout code
@@ -287,5 +256,15 @@ jobs:
         with:
           image: tonistiigi/binfmt:latest
           platforms: all
-      - name: Publish k3d-base images
-        run: earthly --strict --push --no-output --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-k3d-base --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-k3d-base --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd-k3d-base --cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-arm-k3d-base +images --repo=ghcr.io/ --tag=${TAG}-k3d-base
+      - name: Publish images
+        run: |-
+          earthly --strict --push --no-output \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-k3d-base \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-k3d-base \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-arm \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd-k3d-base \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-arm-k3d-base \
+          	+images --repo=ghcr.io/ --tag=${TAG}
