--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -214,7 +214,7 @@ jobs:
     needs:
       - buildAmd
       - buildArm
-      - buildArmK3DBase
+      - buildAmdK3DBase
       - buildArmK3DBase
     steps:
       - name: Checkout code
