--- a/Caddyfile
+++ b/Caddyfile
@@ -49,6 +49,10 @@ http://localhost {
 		redir {scheme}://{host}:20002/gui/
 	}
 
+	handle_path /demo/* {
+		redir {scheme}://{host}:20100/
+	}
+
 	reverse_proxy http://localhost:8000
 }
 
@@ -67,4 +71,8 @@ https://*.*.ts.net:20001 {
 
 https://*.*.ts.net:20002 {
 	reverse_proxy http://k3d-global.tiger-mamba.ts.net:5681
+}
+
+https://*.*.ts.net:20100 {
+	reverse_proxy http://localhost:8080
 }
